add elevator.js library

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
     <footer id="footer">
       <div class="container">
         <div class="go-top">
-          <a href="#top">
+          <a class="elevator-button" href="#top">
             <i class="ti-arrow-up"></i>
           </a>
         </div>
@@ -361,6 +361,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
       ga('create', 'UA-8293285-12', 'auto');
       ga('send', 'pageview');
     </script>
+    <script type="text/javascript" src="lib/elevator/elevator.min.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bundle.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
