--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-10 col-md-offset-1 about-me-text">
-              <p>I read a lot of books, watch too much TV shows and love traveling. But, I am truly passionate about one thing: <i>software development</i>.</p>
+              <p>I read a lot of books, watch too many TV shows and love traveling. But, I am truly passionate about one thing: <i>software development</i>.</p>
             </div>
           </div>
           <!-- end of row-->
