--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
             <ul class="timeline">
               <li>
                 <div class="timeline-item">
-                  <h4>Crackle</h4><span>April 2015 - <b>Present</b></span>
+                  <h4>TelemetryTV</h4><span>April 2016 - <b>Present</b></span>
                 </div>
                 <div class="timeline-description">
-                  <h4>Web & Mobile Developer</h4>
+                  <h4>Software Developer</h4>
                 </div>
               </li>
               <li>
@@ -240,6 +240,14 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                 </div>
                 <div class="timeline-description">
                   <h4>Entrepreneur</h4>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-item">
+                  <h4>Crackle</h4><span>April 2015 - April 2016</span>
+                </div>
+                <div class="timeline-description">
+                  <h4>Web & Mobile Developer</h4>
                 </div>
               </li>
               <li>
