--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <div class="contact-form">
-                <form id="contact-form" method="POST" action="mail.php">
+                <form id="contact-form" method="POST" action="https://formspree.io/mati@tucci.me">
                   <div class="form-group">
                     <input name="fullname" type="text" placeholder="Your Name" data-required="true" class="form-control">
                   </div>
