add more projects

--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <h6>Ionic + Firebase</h6>
                     <p>App to help people who live on the streets of Argentina.</p>
                   </div>
+                  <div class="icon-box-basic"><i class="project-icon ti-game"></i>
+                    <h4><a target="_blank" href="https://itunes.apple.com/ar/app/nana-the-game/id1130813318?l=en&mt=8">nana</a></h4>
+                    <h6>Ionic + Node.js</h6>
+                    <p>nana is a game for those Sudoku and 2048 lovers.</p>
+                  </div>
                   <div class="icon-box-basic"><i class="project-icon icon-phone"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci/socket-starwars">Web Lightsaber</a></h4>
                     <h6>Ionic + Node.js + Socket.IO + CSS3</h6>
@@ -210,6 +215,11 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <h4><a target="_blank" href="https://github.com/matiastucci/socket-tetris">Socket.IO Tetris</a></h4>
                     <h6>Ionic + Node.js + Socket.IO</h6>
                     <p>Play Tetris in your computer and control it with your smartphone.</p>
+                  </div>
+                  <div class="icon-box-basic more-projects" onclick="window.open('https://github.com/matiastucci','_blank')"><i class="project-icon ti-more"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci">More projects</a></h4>
+                    <h6></h6>
+                    <p>You can find more of my projects in my GitHub.</p>
                   </div>
                 </div>
               </div>
