--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                   <div class="icon-box-basic more-projects" onclick="window.open('https://github.com/matiastucci','_blank')"><i class="project-icon ti-more"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci">More projects</a></h4>
                     <h6></h6>
-                    <p>You can find more of my projects in my GitHub.</p>
+                    <p>You can find more of my projects on my GitHub profile.</p>
                   </div>
                 </div>
               </div>
