--- a/projects/easysubs/index.html
+++ b/projects/easysubs/index.html
@@ -11,8 +11,8 @@
 		<h1 class="animated fadeIn">Easysubs</h1>
 		<p class="description">Download subtitles in a very fast and simple way</p>
 		<div class="download-buttons">
-			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/v0.0.5/Easysubs-osx-x64.zip">OS X</a>
-			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/v0.0.3/Easysubs-win32-x64.zip">Windows</a>		
+			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/0.0.6/Easysubs-0.0.6.dmg">OS X</a>
+			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/0.0.6/Easysubs.Setup.0.0.6.exe">Windows</a>		
 		</div>		
 	</div>
 	<footer class="animated slideInUp">
