update easysubs tech

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                 <div class="col-sm-5">
                   <div class="icon-box-basic"><i class="project-icon icon-download"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci/easysubs">Easysubs</a></h4>
-                    <h6>Electron + AngularJS</h6>
+                    <h6>Electron + VueJS</h6>
                     <p>App that allows you to download subtitles in a very fast and simple way.</p>
                   </div>
                   <div class="icon-box-basic"><i class="project-icon icon-map"></i>
