--- a/projects/easysubs/index.html
+++ b/projects/easysubs/index.html
@@ -10,6 +10,7 @@
 	<div class="content">
 		<h1 class="animated fadeIn">Easysubs</h1>
 		<p class="description">Download subtitles in a very fast and simple way</p>
+		<img class="animated fadeIn screen" src="screen.gif" height="238" width="480"/>
 		<div class="download-buttons">
 			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/0.0.7/Easysubs-0.0.7.dmg">OS X</a>
 			<a target="_blank" class="download animated fadeIn" href="https://github.com/matiastucci/easysubs/releases/download/0.0.7/Easysubs.Setup.0.0.7.exe">Windows</a>		
