--- a/projects/easysubs/index.html
+++ b/projects/easysubs/index.html
@@ -5,6 +5,10 @@
 	<link href='css/ionicons.min.css' rel='stylesheet' type='text/css'>
 	<link href='css/animate.css' rel='stylesheet' type='text/css'>
 	<link href='css/style.css' rel='stylesheet' type='text/css'>
+	<meta property="og:title" content="Easysubs"/>
+	<meta property="og:image" content="https://tucci.me/projects/easysubs/screen.png"/>
+	<meta property="og:site_name" content="Easysubs"/>
+	<meta property="og:description" content="Download subtitles in a very fast and simple way"/>
 </head>
 <body>
 	<div class="content">
