--- a/projects/easysubs/index.html
+++ b/projects/easysubs/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Easysubs</title>
+	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0" name="viewport">
 	<link href='css/ionicons.min.css' rel='stylesheet' type='text/css'>
 	<link href='css/animate.css' rel='stylesheet' type='text/css'>
 	<link href='css/style.css' rel='stylesheet' type='text/css'>
@@ -9,6 +10,11 @@
 	<meta property="og:image" content="https://tucci.me/projects/easysubs/screen.png"/>
 	<meta property="og:site_name" content="Easysubs"/>
 	<meta property="og:description" content="Download subtitles in a very fast and simple way"/>
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@tuccimatias" />
+	<meta name="twitter:title" content="Easysubs" />
+	<meta name="twitter:description" content="Download subtitles in a very fast and simple way" />
+	<meta name="twitter:image" content="https://tucci.me/projects/easysubs/screen.png" />
 </head>
 <body>
 	<div class="content">
