--- a/index.html
+++ b/index.html
@@ -179,10 +179,15 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-sm-5">
-                  <div class="icon-box-basic"><i class="project-icon icon-download"></i>
-                    <h4><a target="_blank" href="https://github.com/matiastucci/easysubs">Easysubs</a></h4>
-                    <h6>Electron + VueJS</h6>
-                    <p>App that allows you to download subtitles in a very fast and simple way.</p>
+                  <div class="icon-box-basic"><i class="project-icon icon-map-pin"></i>
+                    <h4><a target="_blank" href="https://github.com/FindEarth">Find Earth</a></h4>
+                    <h6>Nuxt.js + Node.js + React Native</h6>
+                    <p>Open source platform to help non-profit organizations trace missing persons.</p>
+                  </div>
+                  <div class="icon-box-basic"><i class="project-icon icon-linegraph"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/uptime">Uptime</a></h4>
+                    <h6>Vue.js + D3 + Node.js + Socket.io</h6>
+                    <p>Simple web application that monitors load average on your machine.</p>
                   </div>
                   <div class="icon-box-basic"><i class="project-icon icon-map"></i>
                     <h4><a target="_blank" href="http://www.friocero.org">Frio Cero</a></h4>
@@ -199,22 +204,37 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <h6>Ionic + Node.js + Socket.IO + CSS3</h6>
                     <p>Play with a lightsaber using web technologies and your smartphone.</p>
                   </div>
+                  <div class="icon-box-basic"><i class="project-icon icon-global"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/emoji-domain">Emoji domain</a></h4>
+                    <h6>Node.js</h6>
+                    <p>Find available emoji domains to register and start using them.</p>
+                  </div>
                 </div>
                 <div class="col-sm-5 col-md-offset-2">
+                  <div class="icon-box-basic"><i class="project-icon icon-download"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/easysubs">Easysubs</a></h4>
+                    <h6>Electron + Vue.js</h6>
+                    <p>App that allows you to download subtitles in a very fast and simple way.</p>
+                  </div>
                   <div class="icon-box-basic"><i class="project-icon icon-bargraph"></i>
                     <h4><a target="_blank" href="https://github.com/keepers/adra-app">ADRA</a></h4>
                     <h6>Ionic + Node.js + Socket.IO + MongoDB</h6>
                     <p>Platform to collect real-time data for the recovery and development of hard hit areas.</p>
+                  </div>
+                  <div class="icon-box-basic"><i class="project-icon icon-cloud"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/now-purge">Now purge</a></h4>
+                    <h6>Node.js</h6>
+                    <p>Clean your deployments by removing the ones without an alias.</p>
                   </div>
                   <div class="icon-box-basic"><i class="project-icon icon-chat"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci/socket-chat-client">Ionic Chat</a></h4>
                     <h6>Ionic + Node.js + Socket.IO</h6>
                     <p>A simple ionic and Socket.IO ready-to-use chat client app.</p>
                   </div>
-                  <div class="icon-box-basic"><i class="project-icon icon-layers"></i>
-                    <h4><a target="_blank" href="https://github.com/matiastucci/socket-tetris">Socket.IO Tetris</a></h4>
-                    <h6>Ionic + Node.js + Socket.IO</h6>
-                    <p>Play Tetris in your computer and control it with your smartphone.</p>
+                  <div class="icon-box-basic"><i class="project-icon icon-focus"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/ionic-ocr-example">Ionic OCR</a></h4>
+                    <h6>Ionic</h6>
+                    <p>Ionic OCR starter. Scan text in any document using your phone's camera.</p>
                   </div>
                   <div class="icon-box-basic more-projects" onclick="window.open('https://github.com/matiastucci','_blank')"><i class="project-icon ti-more"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci">More projects</a></h4>
