add travels link

--- a/index.html
+++ b/index.html
@@ -110,16 +110,12 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
         </div>
         <div id="navigation" data-onepage="true">
           <ul class="navigation-menu nav">
-            <li><a href="#home" data-scroll="true">Home</a>
-            </li>
-            <li><a href="#about" data-scroll="true">About</a>
-            </li>
-            <li><a href="#projects" data-scroll="true">Projects</a>
-            </li>
-            <li><a href="#experience" data-scroll="true">Experience</a>
-            </li>
-            <li><a href="#contact" data-scroll="true">Contact</a>
-            </li>
+            <li><a href="#home" data-scroll="true">Home</a></li>
+            <li><a href="#about" data-scroll="true">About</a></li>
+            <li><a href="#projects" data-scroll="true">Projects</a></li>
+            <li><a href="#experience" data-scroll="true">Experience</a></li>
+            <li><a href="#contact" data-scroll="true">Contact</a></li>
+            <li><a href="https://travels.now.sh">Travels</a></li>
           </ul>
         </div>
       </div>
