update travels link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
             <li><a href="#projects" data-scroll="true">Projects</a></li>
             <li><a href="#experience" data-scroll="true">Experience</a></li>
             <li><a href="#contact" data-scroll="true">Contact</a></li>
-            <li><a href="https://travels.now.sh">Travels</a></li>
+            <li><a href="https://travels.tucci.me">Travels</a></li>
           </ul>
         </div>
       </div>
