--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                 <div class="col-sm-5">
                   <div class="icon-box-basic"><i class="project-icon icon-map-pin"></i>
                     <h4><a target="_blank" href="https://github.com/FindEarth">Find Earth</a></h4>
-                    <h6>Nuxt.js + Node.js + React Native</h6>
+                    <h6>SSR Nuxt.js + Node.js + React Native</h6>
                     <p>Open source platform to help non-profit organizations trace missing persons.</p>
                   </div>
-                  <div class="icon-box-basic"><i class="project-icon icon-linegraph"></i>
-                    <h4><a target="_blank" href="https://github.com/matiastucci/uptime">Uptime</a></h4>
-                    <h6>Vue.js + D3 + Node.js + Socket.io</h6>
-                    <p>Simple web application that monitors load average on your machine.</p>
+                  <div class="icon-box-basic"><i class="project-icon icon-download"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/easysubs">Easysubs</a></h4>
+                    <h6>Electron + Vue.js</h6>
+                    <p>App that allows you to download subtitles in a very fast and simple way.</p>
                   </div>
                    <div class="icon-box-basic"><i class="project-icon icon-global"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci/emoji-domain">Emoji domain</a></h4>
@@ -315,12 +315,17 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <h6>Ionic + Node.js + Socket.IO</h6>
                     <p>A simple ionic and Socket.IO ready-to-use chat client app.</p>
                   </div>
+                  <div class="icon-box-basic"><i class="project-icon icon-linegraph"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/uptime">Uptime</a></h4>
+                    <h6>Vue.js + D3 + Node.js + Socket.io</h6>
+                    <p>Simple web application that monitors load average on your machine.</p>
+                  </div>
                 </div>
                 <div class="col-sm-5 col-md-offset-2">
-                  <div class="icon-box-basic"><i class="project-icon icon-download"></i>
-                    <h4><a target="_blank" href="https://github.com/matiastucci/easysubs">Easysubs</a></h4>
-                    <h6>Electron + Vue.js</h6>
-                    <p>App that allows you to download subtitles in a very fast and simple way.</p>
+                  <div class="icon-box-basic"><i class="project-icon icon-layers"></i>
+                    <h4><a target="_blank" href="https://hyper.is">Hyper</a></h4>
+                    <h6>Electron + React</h6>
+                    <p>I contributed implementing the auto updates system. Find me in the <a href="https://hyper.is/#credits" target="_blank">credits</a> :)</p>
                   </div>
                   <div class="icon-box-basic"><i class="project-icon icon-bargraph"></i>
                     <h4><a target="_blank" href="https://github.com/keepers/adra-app">ADRA</a></h4>
@@ -342,6 +347,13 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <h6>Ionic</h6>
                     <p>Ionic OCR starter. Scan text in any document using your phone's camera.</p>
                   </div>
+
+                  <div class="icon-box-basic"><i class="project-icon icon-refresh"></i>
+                    <h4><a target="_blank" href="https://github.com/matiastucci/electron-auto-updater-example">Auto Updater Starter</a></h4>
+                    <h6>Electron + Vanilla JS</h6>
+                    <p>Minimal Electron app with auto updates implemented.</p>
+                  </div>
+
                   <div class="icon-box-basic more-projects" onclick="window.open('https://github.com/matiastucci?tab=repositories','_blank')"><i class="project-icon ti-more"></i>
                     <h4><a target="_blank" href="https://github.com/matiastucci?tab=repositories">More projects</a></h4>
                     <h6></h6>
