--- a/index.html
+++ b/index.html
@@ -168,14 +168,27 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                 <li>
                   <div class="timeline-item">
                     <h4>
+                      <a href="https://broadly.com" target="_blank">
+                        Broadly
+                      </a>
+                    </h4>
+                    <span>March 2018 - <b>Present</b></span>
+                  </div>
+                  <div class="timeline-description">
+                    <h4>Remote Software Developer</h4>
+                  </div>
+                </li>
+                <li>
+                  <div class="timeline-item">
+                    <h4>
                       <a href="http://metrica-sports.com" target="_blank">
                         Metrica Sports
                       </a>
                     </h4>
-                    <span>September 2017 - <b>Present</b></span>
+                    <span>September 2017 - March 2018</span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Full-Stack Developer</h4>
+                    <h4>Remote Software Developer</h4>
                   </div>
                 </li>
                 <li>
