--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                   <div class="timeline-item">
                     <h4>
                       <a href="http://www.bancogalicia.com" target="_blank">
-                        Bango Galicia
+                        Banco Galicia
                       </a>
                     </h4>
                     <span>June 2014 - <b>April 2015</b></span>
