--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <span>March 2018 - <b>Present</b></span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Software Developer</h4>
+                    <h4>Remote Software Engineer</h4>
                   </div>
                 </li>
                 <li>
@@ -188,7 +188,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <span>September 2017 - March 2018</span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Software Developer</h4>
+                    <h4>Remote Software Engineer</h4>
                   </div>
                 </li>
                 <li>
@@ -201,7 +201,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <span>April 2016 - September 2017</span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Software Developer</h4>
+                    <h4>Remote Software Engineer</h4>
                   </div>
                 </li>
                 <li>
@@ -214,7 +214,7 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
                     <span>April 2015 - April 2016</span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Software Developer</h4>
+                    <h4>Remote Software Engineer</h4>
                   </div>
                 </li>
                 <li>
