--- a/index.html
+++ b/index.html
@@ -152,30 +152,30 @@ NNMD    888888888888888888888      88888888888888888888888888888888888D    DNNN
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <ul class="timeline">
-              <li>
+                <li>
                   <div class="timeline-item">
                     <h4>
-                      <a href="https://keepe.rs" target="_blank">
-                        Keepers
+                      <a href="https://readwise.io" target="_blank">
+                        Readwise
                       </a>
                     </h4>
-                    <span>January 2012 - <b>Present</b></span>
+                    <span>September 2021 - <b>Present</b></span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Entrepreneur</h4>
+                    <h4>Remote Software Engineer</h4>
                   </div>
                 </li>
                 <li>
                   <div class="timeline-item">
                     <h4>
-                      <a href="https://broadly.com" target="_blank">
-                        Broadly
+                      <a href="https://annotate.tv" target="_blank">
+                        Annotate.tv
                       </a>
                     </h4>
-                    <span>March 2018 - <b>Present</b></span>
+                    <span>September 2020 - <b>Present</b></span>
                   </div>
                   <div class="timeline-description">
-                    <h4>Remote Software Engineer</h4>
+                    <h4>Founder</h4>
                   </div>
                 </li>
                 <li>
